--- a/render.yaml
+++ b/render.yaml
@@ -1,19 +1,19 @@
 services:
   - type: web
-    name: salon-api
-    env: ruby
-    plan: free
-    buildCommand: "bundle install && bundle exec rails db:prepare"
-    startCommand: "bundle exec puma -C config/puma.rb"
+    name: my-rails-app
+    env: docker
+    dockerfilePath: ./Dockerfile
+    plan: starter
+    autoDeploy: true
     envVars:
-      - key: DATABASE_URL
-        fromDatabase:
-          name: salon-api-db
-          property: connectionString
-      - key: RAILS_MASTER_KEY
-        sync: false
       - key: RAILS_ENV
         value: production
+      - key: DATABASE_URL
+        value: postgresql://postgres.buhqmxvqhdsthzdsylgv:mMdf5Z60g5K9TCsd@aws-1-us-east-1.pooler.supabase.com:5432/postgres?sslmode=require
+      - key: BUNDLE_WITHOUT
+        value: "development:test"
+      - key: SECRET_KEY_BASE
+        value: "<Gere seu secret com `rails secret`>"
     autoDeploy: true
     healthCheckPath: /up
 
